[package]
name = "awsave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.4"
aws-sdk-s3 = "1.96.0"
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-chrono"] }
chacha20 = "0.9.1"
chrono = "0.4.42"
hex = "0.4.3"
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
zeroize = { version = "1.8.1", features = ["derive"] }
